--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "clangd.arguments": [
+        "--compile-commands-dir=build"
+    ],
     "files.associations": {
         "*.cpp": "cpp",
         "array": "cpp",
